--- a/resume/config.yaml
+++ b/resume/config.yaml
@@ -1,4 +1,4 @@
-baseURL: "http://example.org/"
+baseURL: "https://bazan.dev/"
 languageCode: 'en-us'
 title: 'Ion Bazan - Resume'
 disableKinds: [sitemap, RSS]
