--- a/resume/data/resume.yaml
+++ b/resume/data/resume.yaml
@@ -8,19 +8,22 @@ contact:
   github: IonBazan
   linkedin: linkedin.com/in/ion-bazan
 
-summary:  |
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum non eros pulvinar, luctus lorem a, scelerisque nunc. Nunc accumsan sed purus quis vulputate. Vestibulum et egestas velit. Quisque viverra odio urna, a rutrum risus sollicitudin vitae. Sed eu porta nisi. Morbi sed nibh sed dolor aliquet lacinia nec et neque. Proin tristique risus imperdiet orci aliquam, sed tincidunt sapien tincidunt. Quisque ut lacus sit amet dolor aliquet euismod.
+summary: |
+  I am a Singapore-based Senior Software Developer who is passinate about good practices, clean code and containerized scalable environments.
+  With over 5 years of experience in PHP & Symfony and 3 in Laravel and Docker, I have a deep understanding of frameworks' internals and I love writing domain-oriented and framework-agnostic code that is easy to test, port and refactor.
+  I am contributing to several Open-Source projects and released a few packages that are used by other developers.
+  Seeking new opportunities and challenging roles in fast-growing areas (fintech, banking, IoT) that would involve working with multiple technologies and serverless environments.
 
 experience:
   - company: Secretlab
     country: Singapore
     position: Senior Backend Developer
     timeperiod: August 2020 - now
-    description: Developing e-commerce and internal CRM platform.
+    description: Developing e-commerce and internal CRM platform. Flawlessly migrating and refactoring legacy system into a modern framework using and improving scalability. Incorporating serverless components improve scalability during traffic peaks. Integrating with external services such as Shopify.
     website: https://secretlab.sg/
+    technologies: [PHP, NodeJS, AWS Lambda, Laravel, CodeIgniter, Symfony, MariaDB, Docker, Shopify]
 
-  -
-    company: BeMyGuest PTE LTD
+  - company: BeMyGuest PTE LTD
     country: Singapore
     position: Software Developer
     timeperiod: July 2019 - July 2019
@@ -42,7 +45,7 @@ experience:
     timeperiod: September 2015 - June 2018
     description: Developing B2B e-commerce, CRM and B2C systems using Symfony 3, Yii, PostgreSQL, MariaDB, ElasticSearch, GraphQL
     website: https://boldare.com/
-    technologies: [PHP, JavaScript, Symfony 4, MySQL, PostgreSQL, Yii, Docker, ElasticSearch, MariaDB, GraphQL, jQuery]
+    technologies: [PHP, JavaScript, Symfony 4, Doctrine ORM, MySQL, PostgreSQL, Yii, Docker, ElasticSearch, MariaDB, GraphQL, jQuery]
 
   - company: Extreme Coding Ltd
     country: Poland
@@ -94,6 +97,7 @@ languages:
 interests:
   - Open Source
   - Longboard
+  - Dragon Boat
   - Travel
   - Hiking
 
