add raw/ascii output for curl and wget

--- a/resume/config.yaml
+++ b/resume/config.yaml
@@ -2,3 +2,6 @@ baseURL: "https://bazan.dev/"
 languageCode: 'en-us'
 title: 'Ion Bazan - Resume'
 disableKinds: [sitemap, RSS]
+outputFormats:
+  HTML:
+    baseName: myindex
