--- a/resume/data/resume.yaml
+++ b/resume/data/resume.yaml
@@ -10,17 +10,20 @@ contact:
 
 summary: |
   I am a Singapore-based Senior Software Developer who is passinate about good practices, clean code and containerized scalable environments.
-  With over 5 years of experience in PHP & Symfony and 3 in Laravel and Docker, I have a deep understanding of frameworks' internals and I love writing domain-oriented and framework-agnostic code that is easy to test, port and refactor.
+  With over 6 years of experience in PHP & Symfony and 4 in Laravel and Docker, I have a deep understanding of frameworks' internals and I love writing domain-oriented and framework-agnostic code that is easy to test, port and refactor.
   I am contributing to several Open-Source projects and released a few packages that are used by other developers.
 
 experience:
   - company: PomeloPay
     country: Singapore
-    position: Lead PHP Developer
+    position: Lead Full Stack Developer (Banking Solutions)
     timeperiod: June 2021 - now
-    description: Developing payment solutions and management portals with Symfony 5, MongoDB, React and Docker. Introducing CI/CD pipelines to automate deployments.
+    description: |
+      Leading multiple projects in the Banking Solutions team, elevating the banking experience for financial institutions in APAC utilising the latest in payment technologies and serverless environment.
+      Revamping existing platforms used by bank executives to manage retail customers and merchants.
+      Improving Continuous Integration and Continuous Deployment pipelines in order to deliver better developer experience.
     website: https://pomelopay.com/
-    technologies: [PHP, NodeJS, AWS, Symfony 5, MongoDB, React, Docker]
+    technologies: [PHP 8, Serverless, React, TypeScript, NodeJS, AWS, Symfony 5, MongoDB, Docker]
 
   - company: Secretlab
     country: Singapore
@@ -28,7 +31,7 @@ experience:
     timeperiod: August 2020 - May 2021
     description: Developing e-commerce and internal CRM platform. Flawlessly migrating and refactoring legacy system into a modern framework using and improving scalability. Incorporating serverless components improve scalability during traffic peaks. Integrating with external services such as Shopify.
     website: https://secretlab.sg/
-    technologies: [PHP, NodeJS, AWS Lambda, Laravel, CodeIgniter, Symfony, MariaDB, Docker, Shopify]
+    technologies: [PHP 8, NodeJS, AWS Lambda, Laravel, CodeIgniter, Symfony, MariaDB, Docker, Shopify]
 
   - company: BeMyGuest PTE LTD
     country: Singapore
@@ -69,7 +72,7 @@ education:
 
 skills:
   backend:
-    - name: PHP 7
+    - name: PHP 8
       level: 99
     - name: Symfony 5
       level: 90
