--- a/resume/package.json
+++ b/resume/package.json
@@ -3,5 +3,10 @@
   "version": "1.0.0",
   "dependencies": {
     "bootstrap": "^5.1.3"
+  },
+  "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^4.1.3",
+    "postcss": "^8.4.5",
+    "postcss-cli": "^9.1.0"
   }
 }
