--- a/resume/data/resume.yaml
+++ b/resume/data/resume.yaml
@@ -1,111 +1,29 @@
 name: Ion Bazan
 position: Senior Software Developer
-contact:
-  phone: +65 9447 2174
-  email: ion.bazan@gmail.com
-  location: Singapore
-  website: bazan.dev
-  github: IonBazan
-  linkedin: linkedin.com/in/ion-bazan
 
 summary: |
   I am a Singapore-based Lead Software Developer who is passionate about good practices, clean code and containerized scalable environments.
-  With over 6 years of experience in PHP & Symfony and 4 in Laravel and Docker, I have a deep understanding of frameworks' internals and I love writing domain-oriented and framework-agnostic code that is easy to test, port and refactor.
+  With over 8 years of experience in PHP & Symfony and 6 in Laravel and Docker, I have a deep understanding of frameworks' internals and I love writing domain-oriented and framework-agnostic code that is easy to test, port and refactor.
   I am contributing to several Open-Source projects and released a few packages that are used by other developers.
-
-experience:
-  - company: PomeloPay
-    country: Singapore
-    position: Lead Full Stack Developer (Banking Solutions)
-    timeperiod: May 2021 - Present
-    description: |
-      Leading multiple projects in the Banking Solutions team, elevating the banking experience for financial institutions in APAC utilising the latest in payment technologies and serverless environment.
-      Revamping existing platforms used by bank executives to manage retail customers and merchants.
-      Improving Continuous Integration and Continuous Deployment pipelines in order to deliver better developer experience.
-      Managing AWS Container infrastructure using CloudFormation templates.
-    website: https://pomelopay.com/
-    technologies: [PHP 8, Serverless, React, TypeScript, NodeJS, AWS, CloudFormation, Symfony 6, MongoDB, Docker]
-
-  - company: Secretlab
-    country: Singapore
-    position: Senior Backend Developer
-    timeperiod: August 2020 - April 2021
-    description: Developing e-commerce and internal CRM platform. Flawlessly migrating and refactoring legacy system into a modern framework using and improving scalability. Incorporating serverless components improve scalability during traffic peaks. Integrating with external services such as Shopify.
-    website: https://secretlab.sg/
-    technologies: [PHP 8, NodeJS, AWS Lambda, Laravel, CodeIgniter, Symfony, MariaDB, Docker, Shopify]
-
-  - company: BeMyGuest PTE LTD
-    country: Singapore
-    position: Software Developer
-    timeperiod: July 2019 - July 2020
-    description: Developing B2B and B2C ticketing platform for tours & activities in PHP7, Laravel and Vue.js. Implementing external API integrations and optimizing application performance.
-    website: https://bemyguest.com.sg/
-    technologies: [PHP, JavaScript, Laravel, MySQL, Docker, Vue.js]
-
-  - company: Going.
-    country: Poland
-    position: Software Developer
-    timeperiod: July 2018 - June 2019
-    description: Developing an event platform and splitting it to microservices. Creating POS API based on Symfony 4 and frontend app on top of Raspberry Pi 3 using Electron and React with BOCA thermal printer.
-    website: https://goingapp.pl/
-    technologies: [PHP, JavaScript, Laravel, Symfony 4, MySQL, Docker, React, Electron, Raspberry Pi, NodeJS, Thermal Printers]
-
-  - company: XSolve
-    country: Poland
-    position: Software Developer
-    timeperiod: September 2015 - June 2018
-    description: Developing B2B e-commerce, CRM and B2C systems using Symfony 3, Yii, PostgreSQL, MariaDB, ElasticSearch, GraphQL
-    website: https://boldare.com/
-    technologies: [PHP, JavaScript, Symfony 4, Doctrine ORM, MySQL, PostgreSQL, Yii, Docker, ElasticSearch, MariaDB, GraphQL, jQuery]
-
-  - company: Extreme Coding Ltd
-    country: Poland
-    position: Junior PHP Developer
-    timeperiod: April 2015 - September 2015
-    description: Developing e-commerce (Laravel and custom CMS) and social network system (Symfony 2)
-    website: https://extremecoding.pl/
-    technologies: [PHP, JavaScript, Symfony 2, OctoberCMS, MySQL, jQuery]
 
 education:
   - degree: BSc in Information Technology
-    timeperiod: October 2012 - January 2016
+    start: 2012-10-01
+    end: 2016-01-22
     university: Silesian University of Technology
+    location: Gliwice, Poland
+    url: https://www.polsl.pl/
 
 certificates:
   - name: Certified ScrumMaster
-    date: 28 June 2022
+    date: 2022-06-28
     issuer: ScrumAlliance
     url: https://bcert.me/sjldvnxjo
 
-skills:
-  backend:
-    - name: PHP 8
-      level: 99
-    - name: Symfony 6
-      level: 90
-    - name: Laravel
-      level: 60
-    - name: PostgreSQL
-      level: 70
-    - name: MySQL
-      level: 85
-    - name: MongoDB
-      level: 70
-    - name: AWS
-      level: 50
-    - name: TypeScript
-      level: 80
-    - name: React
-      level: 60
-  others:
-    - DevOps
-    - Code Review
-    - Docker
-    - Kubernetes
-    - Git
-    - Unit Testing
-    - Continuous Integration
-    - TDD
+  - name: AWS Certified Cloud Practitioner
+    date: 2022-12-17
+    issuer: Amazon Web Services Training and Certification
+    url: https://www.credly.com/badges/f88f8843-551c-4c29-88a9-511310621d5f
 
 languages:
   Polish: Native
@@ -115,36 +33,5 @@ languages:
 interests:
   - Open Source
   - Longboard
-  - Outrigger Canoeing
+  - Dragon Boat
   - Hiking
-
-projects:
-  - name: Composer-Diff
-    timeperiod: June 2020 - Present
-    url: https://github.com/IonBazan/composer-diff
-    keywords: [PHP, Composer, Infection]
-    description: Compares composer.lock changes and generates Markdown report so you can use it in PR description.
-
-  - name: Laravel Container Debug
-    timeperiod: July 2020 - Present
-    url: https://github.com/IonBazan/laravel-container-debug
-    keywords: [PHP, Laravel, Debugging]
-    description: Lists available services in Laravel IoC Container. Works with Laravel 5.4+, 6.x, 7.x, 8.x and 9.x.
-
-  - name: Alibaba Cloud API Gateway HTTP Request Signer for PHP
-    timeperiod: April 2020 - Present
-    url: https://github.com/IonBazan/aliyun-http-signer
-    keywords: [PHP, Guzzle, Symfony, PSR-7, Aliyun]
-    description: PSR-7-compatible Alibaba Cloud API Gateway request signing implementation. Integrates with Guzzle ⛽️ and HttPlug 🐘.
-
-  - name: Doctrine MongoDB ODM
-    timeperiod: August 2021 - Present
-    url: https://github.com/doctrine/mongodb-odm
-    keywords: [PHP, Doctrine, Symfony, MongoDB, ODM]
-    description: Maintaining and contributing to Doctrine MongoDB ODM and Doctrine MongoDB Bundle for Symfony.
-
-  - name: Symfony Polyfill
-    timeperiod: August 2018 - Present
-    url: https://github.com/symfony/polyfill
-    keywords: [PHP, Symfony]
-    description: Various contributions to Symfony Polyfill library, allowing to write future-compatible code.
