--- a/resume/data/resume.yaml
+++ b/resume/data/resume.yaml
@@ -12,7 +12,7 @@ education:
     end: 2016-01-22
     university: Silesian University of Technology
     location: Gliwice, Poland
-    url: https://www.polsl.pl/
+    url: https://www.polsl.pl/en
 
 certificates:
   - name: Certified ScrumMaster
