Fetch up to date repo details

--- a/resume/data/resume/experience/00_extreme-coding.yaml
+++ b/resume/data/resume/experience/00_extreme-coding.yaml
@@ -1,7 +1,6 @@
-company: Extreme Coding Ltd
+company: Extreme Coding
 country: Poland
 position: Junior PHP Developer
-timeperiod: April 2015 - September 2015
 start: 2015-04-01
 end: 2015-09-21
 description: Developing e-commerce (Laravel and custom CMS) and social network system (Symfony 2)
