--- a/resume/data/resume/experience/05_pomelo-pay.yaml
+++ b/resume/data/resume/experience/05_pomelo-pay.yaml
@@ -1,7 +1,6 @@
 company: PomeloPay
 country: Singapore
-position: Lead Full Stack Developer (Banking Solutions)
-timeperiod: May 2021 - November 2022
+position: Lead Full Stack Developer
 start: 2021-05-01
 end: 2022-11-14
 description: |
