--- a/resume/data/resume/experience/03_bmg.yaml
+++ b/resume/data/resume/experience/03_bmg.yaml
@@ -1,7 +1,6 @@
-company: BeMyGuest PTE LTD
+company: BeMyGuest
 country: Singapore
 position: Software Developer
-timeperiod: July 2019 - July 2020
 start: 2019-07-01
 end: 2020-07-31
 description: Developing B2B and B2C ticketing platform for tours & activities in PHP7, Laravel and Vue.js. Implementing external API integrations and optimizing application performance.
