--- a/resume/data/resume/experience/06_aspire.yaml
+++ b/resume/data/resume/experience/06_aspire.yaml
@@ -1,7 +1,6 @@
 company: Aspire
 country: Singapore
-position: Tech Lead (Treasury) / Associate Architect
-timeperiod: November 2022 - Now
+position: Tech Lead / Associate Architect
 start: 2022-11-15
 end: ~
 description:
