--- a/resume/data/resume/experience/06_aspire.yaml
+++ b/resume/data/resume/experience/06_aspire.yaml
@@ -3,6 +3,14 @@ country: Singapore
 position: Tech Lead / Associate Architect
 start: 2022-11-15
 end: ~
-description:
+description: |
+  Architecting an all-encompassing finance operating system tailored for the APAC region.\
+  Spearheading infrastructure enhancements, including the transition to Docker containers, to bolster scalability and observability across our distributed application.\
+  Initiating and driving platform-wide optimizations while enhancing developer experience through bespoke tools and reusable components.\
+  Streamlining our CI pipeline by optimizing existing processes, transitioning to GitHub self-hosted runners to minimize infrastructure costs, and implementing code metrics to monitor progress.\
+  Tackling ongoing application issues pertinent to the Payments and Spend teams by conducting root cause analysis and implementing long-term solutions.\
+  Implementing an automatic OCR processing feature for incoming email messages attachments, reducing manual processing time by 90%.\
+  Leading a seamless user data migration and cross-system authentication mechanism for a new product launch.\
+  Supporting company hiring needs by conducting interviews and reviewing code challenges for potential candidates.
 website: https://aspireapp.com/
 technologies: [PHP 8, Microservices, Golang, Vue, AWS, Docker, TypeScript, Laravel]
