--- a/resume/config.yaml
+++ b/resume/config.yaml
@@ -1,11 +1,24 @@
 baseURL: "https://bazan.dev/"
 relativeURLs: true
 languageCode: en
+timezone: "Asia/Singapore"
 title: 'Ion Bazan - Resume'
-disableKinds: [sitemap, RSS]
+disableKinds: [sitemap, RSS, taxonomy]
 outputFormats:
   HTML:
     baseName: myindex
 build:
   writeStats: true
 disableHugoGeneratorInject: true
+params:
+  isoDateFormat: "2006-01-02T15:04:05Z07:00"
+defaultContentLanguage: en
+defaultContentLanguageInSubdir: false
+
+# Only for local development
+server:
+  redirects:
+    - from: /
+      force: true
+      status: 404
+      to: /myindex.html
