--- a/resume/data/resume.yaml
+++ b/resume/data/resume.yaml
@@ -1,10 +1,10 @@
 name: Ion Bazan
-position: Senior Software Developer
+position: Lead Software Engineer
 
 summary: |
-  I am a Singapore-based Lead Software Developer who is passionate about good practices, clean code and containerized scalable environments.
-  With over 8 years of experience in PHP & Symfony and 6 in Laravel and Docker, I have a deep understanding of frameworks' internals and I love writing domain-oriented and framework-agnostic code that is easy to test, port and refactor.
-  I am contributing to several Open-Source projects and released a few packages that are used by other developers.
+  I am a Singapore-based Lead Software Engineer with Fintech background, who is passionate about good practices, clean code and containerized scalable environments.\
+  With over 8 years of experience in PHP & Symfony and 6 in Laravel and Docker, I have a deep understanding of frameworks' internals and I love writing domain-oriented and framework-agnostic code that is easy to test, port and refactor.\
+  I am contributing to several Open-Source projects and released a few packages that are used by many other developers.
 
 education:
   - degree: BSc in Information Technology
