--- a/resume/config.yaml
+++ b/resume/config.yaml
@@ -6,19 +6,12 @@ title: 'Ion Bazan - Resume'
 disableKinds: [sitemap, RSS, taxonomy]
 outputFormats:
   HTML:
-    baseName: myindex
+    baseName: resume
 build:
   writeStats: true
 disableHugoGeneratorInject: true
 params:
   isoDateFormat: "2006-01-02T15:04:05Z07:00"
+  source: https://github.com/IonBazan/bazan.dev
 defaultContentLanguage: en
 defaultContentLanguageInSubdir: false
-
-# Only for local development
-server:
-  redirects:
-    - from: /
-      force: true
-      status: 404
-      to: /myindex.html
