--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ion-bazan-resume",
   "version": "1.0.0",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "bootstrap": "^5.3.2"
   },
   "devDependencies": {
