--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -27,5 +27,7 @@ services:
     ID: G-5ZGWNH0TXH
 module:
   mounts:
+    - source: "static"
+      target: "static"
     - source: "./node_modules/@fortawesome/fontawesome-free/webfonts"
       target: "static/webfonts"
