Add Credly profile

--- a/data/resume/contact.yaml
+++ b/data/resume/contact.yaml
@@ -7,3 +7,4 @@ linkedin: linkedin.com/in/ion-bazan
 packagist: IonBazan
 dev_to: ionbazan
 stack_overflow: 851538
+credly: https://www.credly.com/users/ionbazan/badges
