--- a/data/resume.yaml
+++ b/data/resume.yaml
@@ -2,8 +2,8 @@ name: Ion Bazan
 position: Lead Software Engineer
 
 summary: |
-  I am a Singapore-based Lead Software Engineer with Fintech background, who is passionate about good practices, clean code and containerized scalable environments.\
-  With over 8 years of experience in PHP & Symfony and 6 in Laravel and Docker, I have a deep understanding of frameworks' internals and I love writing domain-oriented and framework-agnostic code that is easy to test, port and refactor.\
+  I am a Singapore-based Lead Software Engineer with fintech, travel and events background, who is passionate about good practices, clean code and containerized scalable environments.\
+  With over 9 years of experience in Software Engineering, I have a deep understanding of frameworks' internals and I love writing domain-oriented and framework-agnostic code that is easy to test, port and refactor.\
   I am contributing to several Open-Source projects and released a few packages that are used by many other developers.
 
 education:
