--- a/data/resume/open_source/aliyun-http-signer.yaml
+++ b/data/resume/open_source/aliyun-http-signer.yaml
@@ -2,6 +2,6 @@ name: Alibaba Cloud API Gateway HTTP Request Signer for PHP
 start: 2020-04-28
 repo: IonBazan/aliyun-http-signer
 keywords: [Guzzle, Symfony, PSR-7, Aliyun]
-description: PSR-7-compatible Alibaba Cloud API Gateway request signing implementation. Integrates with Guzzle ⛽️ and HttPlug 🐘.
+description: PSR-7-compatible Alibaba Cloud API Gateway request signing implementation. Integrates with Guzzle and HttPlug.
 order: 2
 packagist: https://packagist.org/packages/ion-bazan/aliyun-http-signer
