Reduce font size, add more skills

--- a/data/resume/experience/05_pomelo-pay.yaml
+++ b/data/resume/experience/05_pomelo-pay.yaml
@@ -9,4 +9,4 @@ description: |
   Improving Continuous Integration and Continuous Deployment pipelines in order to deliver better developer experience.
   Managing AWS Container infrastructure using CloudFormation templates.
 website: https://pomelopay.com/
-technologies: [PHP 8, Serverless, React, TypeScript, NodeJS, AWS, CloudFormation, Symfony 6, MongoDB, Docker]
+technologies: [PHP 8, Serverless, Hiring, Team management, React, TypeScript, NodeJS, AWS, CloudFormation, Symfony 6, MongoDB, Docker]
