--- a/data/resume/certificates.yaml
+++ b/data/resume/certificates.yaml
@@ -5,7 +5,7 @@
 
 - name: AWS Certified Cloud Practitioner
   date: 2022-12-17
-  issuer: Amazon Web Services Training and Certification
+  issuer: AWS Training and Certification
   url: https://www.credly.com/badges/f88f8843-551c-4c29-88a9-511310621d5f
 
 - name: Redis Certified Developer
