--- a/data/resume/experience/01_xsolve.yaml
+++ b/data/resume/experience/01_xsolve.yaml
@@ -3,6 +3,9 @@ country: Poland
 position: Software Developer
 start: 2015-09-22
 end: 2018-06-30
-description: Developing B2B e-commerce, CRM and B2C systems using Symfony 3, Yii, PostgreSQL, MariaDB, ElasticSearch, GraphQL
+description: |
+  - Building various custom solutions for clients in PHP, Symfony 3, Yii, PostgreSQL, MariaDB, ElasticSearch, GraphQL.
+  - Analyzing business requirements and designing software architecture.
+  - Monitoring and optimizing application performance using New Relic and Blackfire.
 website: https://boldare.com/
 technologies: [PHP, JavaScript, Symfony 4, Doctrine ORM, MySQL, PostgreSQL, Yii, Docker, ElasticSearch, MariaDB, GraphQL, jQuery]
