--- a/data/resume/experience/04_secretlab.yaml
+++ b/data/resume/experience/04_secretlab.yaml
@@ -3,6 +3,11 @@ country: Singapore
 position: Senior Backend Developer
 start: 2020-08-01
 end: 2021-04-30
-description: Developing e-commerce and internal CRM platform. Flawlessly migrating and refactoring legacy system into a modern framework using and improving scalability. Incorporating serverless components improve scalability during traffic peaks. Integrating with external services such as Shopify.
+description: |
+  - Developing e-commerce and internal CRM platform managing orders, inventory, warranty claims, and customer data.
+  - Gradually migrating and refactoring legacy CakePHP system into Laravel framework, improving productivity and scalability without any downtime.
+  - Mentoring and conducting code reviews for junior developers.
+  - Incorporating serverless NodeJS services for high-traffic international events and raffles. 
+  - Integrating with external services such as Shopify, Instagram, and Facebook.
 website: https://secretlab.sg/
 technologies: [PHP 8, NodeJS, AWS Lambda, Laravel, CodeIgniter, Symfony, MariaDB, Docker, Shopify]
