--- a/data/resume/open_source/composer-diff.yaml
+++ b/data/resume/open_source/composer-diff.yaml
@@ -1,7 +1,7 @@
 name: Composer-Diff
 start: 2020-06-22
 repo: IonBazan/composer-diff
-keywords: [Composer, Utilities, Mutation Testing]
+keywords: [Composer, Utilities]
 description: Compares composer.lock changes and generates Markdown report so you can use it in PR description.
 order: 0
 packagist: https://packagist.org/packages/ion-bazan/composer-diff
