--- a/data/resume/experience/03_bmg.yaml
+++ b/data/resume/experience/03_bmg.yaml
@@ -3,6 +3,9 @@ country: Singapore
 position: Software Developer
 start: 2019-07-01
 end: 2020-07-31
-description: Developing B2B and B2C ticketing platform for tours & activities in PHP7, Laravel and Vue.js. Implementing external API integrations and optimizing application performance.
+description: |
+  - Developing B2B and B2C ticketing platform for tours & activities in PHP7, Laravel and Vue.js. 
+  - Implementing external API integrations and optimizing application performance.
+  - Conducting code reviews and mentoring junior developers.
 website: https://bemyguest.com.sg/
 technologies: [PHP, JavaScript, Laravel, MySQL, Docker, Vue.js]
