--- a/data/resume/experience/05_pomelo-pay.yaml
+++ b/data/resume/experience/05_pomelo-pay.yaml
@@ -4,9 +4,12 @@ position: Lead Full Stack Developer
 start: 2021-05-01
 end: 2022-11-14
 description: |
-  Leading multiple projects in the Banking Solutions team, elevating the banking experience for financial institutions in APAC utilising the latest in payment technologies and serverless environment.
-  Revamping existing platforms used by bank executives to manage retail customers and merchants.
-  Improving Continuous Integration and Continuous Deployment pipelines in order to deliver better developer experience.
-  Managing AWS Container infrastructure using CloudFormation templates.
+  - Leading and nurturing a team of 5 engineers in several projects, enforcing best practices, conducting code reviews, and providing guidance to developers, elevating the banking experience for financial institutions with **serverless environment**.
+  - **Defining OKRs and KPIs**, and ensuring the team's alignment with the company's goals, improving the team's productivity by **20%**. 
+  - Reducing the time to market for internal dashboard features by creating a **custom framework** and reusable components, integrating with **MongoDB** and **AWS** services.
+  - Scaling up the team by hiring and onboarding new engineers, conducting interviews for in-house, remote and offshore positions.
+  - Improving **CircleCI pipelines**, delivering better developer experience, including flaky test reporting and parallel testing.
+  - Implementing **AWS ECS** and serverless infrastructure using **CloudFormation** templates to deliver a scalable and cost-effective solution.
+  - Developing a sense of ownership and discipline among fellow employees, and creating a culture of knowledge sharing by conducting multiple sessions on various topics.
 website: https://pomelopay.com/
 technologies: [PHP 8, Serverless, Hiring, Team management, React, TypeScript, NodeJS, AWS, CloudFormation, Symfony 6, MongoDB, Docker]
