--- a/data/resume/open_source/mongodb-odm.yaml
+++ b/data/resume/open_source/mongodb-odm.yaml
@@ -1,7 +1,7 @@
 name: Doctrine MongoDB ODM
 start: 2021-08-04
 repo: doctrine/mongodb-odm
-keywords: [Doctrine, Symfony, MongoDB, ODM]
+keywords: [Doctrine, Symfony, MongoDB]
 description: Maintaining and contributing to Doctrine MongoDB ODM and Doctrine MongoDB Bundle for Symfony.
 order: 3
 packagist: https://packagist.org/packages/doctrine/mongodb-odm
