--- a/data/resume/experience/06_aspire.yaml
+++ b/data/resume/experience/06_aspire.yaml
@@ -1,6 +1,6 @@
 company: Aspire
 country: Singapore
-position: Tech Lead / Associate Architect
+position: Tech Lead / Software Architect (Payments)
 start: 2022-11-15
 end: ~
 description: |
