--- a/data/resume.yaml
+++ b/data/resume.yaml
@@ -1,8 +1,8 @@
 name: Ion Bazan
-position: Lead Software Engineer
+position: Software Architect / Tech Lead
 
 summary: |
-  Lead Software Engineer / Software Architect with fintech, travel and events background, who is passionate about good practices, clean code and containerized scalable environments.\
+  Software Architect / Tech Lead with fintech, travel and events background, who is passionate about good practices, clean code and containerized scalable environments.\
   With over 9 years of experience in Software Engineering, I have a deep understanding of frameworks' internals and I love writing domain-oriented and framework-agnostic code that is easy to test, port and refactor.\
   Contributing to several Open-Source projects and released a few packages that are used by many other developers.
 
