Add CompTIA PenTest+

--- a/data/resume/certificates.yaml
+++ b/data/resume/certificates.yaml
@@ -17,3 +17,8 @@
   date: 2024-05-31
   issuer: GitHub
   url: https://www.credly.com/badges/1f0f0f62-ee86-41aa-afa4-0e22bcd65332
+
+- name: CompTIA PenTest+
+  date: 2025-03-25
+  issuer: CompTIA
+  url: https://www.credly.com/badges/caa0ca00-35c6-493a-b07c-fb396d34e309
