Reduce empty space

--- a/data/resume/experience/05_pomelo-pay.yaml
+++ b/data/resume/experience/05_pomelo-pay.yaml
@@ -4,7 +4,7 @@ position: Lead Full Stack Developer
 start: 2021-05-01
 end: 2022-11-14
 description: |
-  - Leading and nurturing a team of 5 engineers in several projects, enforcing best practices, conducting code reviews, and providing guidance to developers, elevating the banking experience for financial institutions with **serverless environment**.
+  - Leading and mentoring a team of 5 engineers in several projects, enforcing best practices, conducting code reviews, and providing guidance to developers, elevating the banking experience for financial institutions with **serverless environment**.
   - **Defining OKRs and KPIs**, and ensuring the team's alignment with the company's goals, improving the team's productivity by **20%**. 
   - Reducing the time to market for internal dashboard features by creating a **custom framework** and reusable components, integrating with **MongoDB** and **AWS** services.
   - Scaling up the team by hiring and onboarding new engineers, conducting interviews for in-house, remote and offshore positions.
