--- a/data/resume/experience/06_aspire.yaml
+++ b/data/resume/experience/06_aspire.yaml
@@ -5,10 +5,10 @@ start: 2022-11-15
 end: ~
 description: |
   - Leading the transition to a **Golang based microservices architecture** to improve scalability and maintainability, architecting **Payment Orchestrator** and **Payout Service**.
-  - Maintaining existing application infrastructure and **architecting new features** to fulfill business requirements.
-  - Reducing CI/CD pipeline **execution time by 30%** by optimizing build processes, parallel testing ang self-hosted runners.
+  - Maintaining strategic application infrastructure and **architecting new features** to fulfill business objectives.
+  - Reducing CI/CD pipeline **execution time by 30%** by optimizing build processes, parallel testing and self-hosted runners.
   - Integrating with multiple payment providers, banks and external services, including **Wise, Currency Cloud, DBS**, to support Aspire's global expansion.
-  - Continous monitoring and improving application performance. Refactoring existing core features, **achieving up to 20x** faster processing times.
+  - Continuous monitoring and improving application performance. Refactoring existing core features, **achieving up to 20x** faster processing times.
   - Spearheading infrastructure enhancements, including the transition to Docker containers, improving scalability and observability across our distributed application using **OpenTelemetry and Grafana**.
   - Supporting company hiring needs by **conducting interviews** and reviewing code challenges for candidates.
   - Ensuring platform security by implementing **OWASP** best practices, conducting regular security audits and investigating security incidents.
